--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"client": "TIGHITCO", "invoice_type": "EXPO", "file_name": "CH319166.pdf"}
+{"client": "MMJ", "invoice_type": "EXPO", "file_name": "PT24066.pdf", "folder_path": "D:\\SpaceGpt\\Files\\MMJ_EXPO"}
