--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"client": "MMJ", "invoice_type": "EXPO", "file_name": "PT24066.pdf", "folder_path": "D:\\SpaceGpt\\Files\\MMJ_EXPO"}
+{"client": "EATON", "invoice_type": "IMPO", "file_name": "DEF-220001.pdf", "folder_path": "D:\\SpaceGpt\\Files\\EATON_IMPO"}
