--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"client": "EATON", "invoice_type": "IMPO", "file_name": "DEF-220001.pdf", "folder_path": "D:\\SpaceGpt\\Files\\EATON_IMPO"}
+{"client": "MMJ", "invoice_type": "IMPO", "folder_path": "D:\\SpaceGpt\\Files\\MMJ_IMPO"}
