Change model version commit

--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"client": "MMJ", "invoice_type": "IMPO", "folder_path": "D:\\SpaceGpt\\Files\\MMJ_IMPO"}
+{"client": "HUTCHINSON", "invoice_type": "IMPO", "folder_path": "D:\\SpaceGpt\\Files\\HUTCHINSON_IMPO"}
